[package]
name = "tls-vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
log = "0.4.27"
pnet = "0.35.0"
rand = "0.9.2"
tokio = { version = "1.47.0", features = ["full"] }
tun = "0.8.3"
tun-rs = {version = "2.5.7", features = ["async"]}
uuid = {version = "1.17.0", features = ["v4"]}

[dev-dependencies]
env_logger = "0.11.8"
